<resources>
    <string name="app_name">Task Master</string>
    <string name="new_task_created">New Task Created!</string>
    <string name="task_body">Task Body</string>
    <string name="add_task">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="create_new_task">Create New Task</string>
    <string name="my_tasks">My Tasks</string>
    <string name="tasks_image_placeholder">Tasks Image Placeholder</string>
    <string name="all_tasks">All Tasks</string>
    <string name="task_details">Task Details</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="make_task_details">Details</string>
    <string name="make_task_details1">Details 1</string>
    <string name="make_task_details2">Details 2</string>
    <string name="settings">Settings</string>
    <string name="update_username">Update Username</string>
    <string name="my_tasks_list">My Tasks List</string>
    <string name="update_team_name">Update Team Name</string>
    <string name="task_status">Task Status</string>
    <string name="choose_a_team">Choose a Team</string>
    <string name="team_1">team 1</string>
    <string name="team_2">team 2</string>
    <string name="team_3">team 3</string>
    <string name="save_username">Save Username</string>
    <string name="title_label">title_label</string>
    <string name="body_label">body_label</string>
    <string name="status_label">status_label</string>
    <string name="delete">delete</string>
    <string name="verification">Verification</string>
    <string name="verification_code">verification code</string>
    <string name="login">login</string>
    <string name="email">email</string>
    <string name="username">username</string>
    <string name="signup">Signup</string>
    <string name="password">password</string>
    <string name="logout">logout</string>
    <string name="upload_file">upload file</string>
    <string name="link">link</string>
    <string name="todo">TODO</string>
    <string name="location">Location</string>
</resources>